--- a/app/src/main/res/layout/moments_item.xml
+++ b/app/src/main/res/layout/moments_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/border_indicator"
+        android:background="@drawable/yellow_indicator"
         android:layout_gravity="center_vertical"/>
 
     <ImageView
@@ -36,6 +36,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         tools:text="First moment of my day"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical" />
@@ -51,6 +52,7 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         tools:text="03.11.2023\n15:07"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:gravity="center"
         android:layout_gravity="center_vertical"/>
