--- a/app/src/main/res/layout/moments_item.xml
+++ b/app/src/main/res/layout/moments_item.xml
@@ -1,60 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8dp"
+    android:elevation="4dp"
+    android:backgroundTint="#CCFF90"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/indicate"
-        android:contentDescription="@string/indicate_of_moment"
-        android:layout_weight="0"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/yellow_indicator"
-        android:layout_gravity="center_vertical"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/moment_image"
-        android:contentDescription="@string/image_of_moment"
-        android:layout_weight="0"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/view_borders"
-        android:layout_gravity="center_vertical"/>
+        <ImageView
+            android:id="@+id/indicate"
+            android:contentDescription="@string/indicate_of_moment"
+            android:layout_weight="0"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/yellow_indicator"
+            android:layout_gravity="center_vertical"/>
 
-    <TextView
-        android:id="@+id/moment_text"
-        android:layout_weight="3"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        tools:text="First moment of my day"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:gravity="center_vertical"
-        android:layout_gravity="center_vertical" />
+        <ImageView
+            android:id="@+id/moment_image"
+            android:contentDescription="@string/image_of_moment"
+            android:layout_weight="0"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/view_borders"
+            android:layout_gravity="center_vertical"/>
 
-    <TextView
-        android:id="@+id/moment_date"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        tools:text="03.11.2023\n15:07"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:gravity="center"
-        android:layout_gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/moment_text"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            tools:text="First moment of my day"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/moment_date"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:textAlignment="center"
+            tools:text="03.11.2023\n15:07"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"/>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
